Hopefully fixed bleeds on single articles

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -61,6 +61,7 @@ $lights: rgb(255,128,115) rgb(140,109,215) rgb(255,234,115) rgb(101,224,128);
 ul.blank li { list-style: none inside; }
 
 #logo { background: nth($normals, 1); width: 240px; height: 128px; max-width: none; }
+#logo img { z-index: 0 !important; }
 
 .twtr-hd h3 { display: none; }
 .twtr-hd h4, .twtr-hd h3 { float: left; clear: none; }
@@ -109,10 +110,10 @@ dd { margin-bottom: 10px; }
 		h1, h2, #nav-below h3 { 
 			position: relative;
 			img { 
-				position: absolute; 
-				height: 100%; 
-				max-height: none; 
-				max-width: none; 
+				position: absolute !important; 
+				height: 100% !important; 
+				max-height: none !important; 
+				max-width: none !important; 
 				z-index: -1; 
 			}
 		}
